# amazon-transcribe-live-meeting-assistant

./: .ash.yaml  .gitignore  .gitmodules  .semgrepignore  404.html  CHANGELOG.md  CLAUDE.md  DemoScript.md  END_TO_END_VERIFICATION.md  LICENSE  MODEL_RECOMMENDATIONS.md  Makefile  NOTICE  README.md  README_DEVELOPERS.md  THIRD-PARTY-LICENSES.txt  TROUBLESHOOTING.md  VERSION  VIRTUAL_PARTICIPANT_COMPARISON_ANALYSIS.md  VP_IMPLEMENTATION_VERIFICATION.md  aws-release.sh  debug-vp-data-flow.md  embeddable-components-demo.html  full-lma-deployment-iam-policy.json  index.html  lma-iam-policy-frontend-compute.json  lma-iam-policy-iam.json  lma-iam-policy-infra-data.json  lma-iam-policy-optional-services.json  lma-main.yaml  local-build.sh  local-deployment-build.sh  package-lock.json  package.json  publish-legacy.sh  publish.sh  qna-ma-demo.jsonl  sitemap-0.xml  sitemap-index.xml  test-deployment-build.sh  (+4 more)
lib/lma_cli_pkg/: pyproject.toml
lib/lma_cli_pkg/lma_cli/: __init__.py  cli.py  entry.py  formatters.py
lib/lma_cli_pkg/lma_cli.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
lib/lma_cli_pkg/lma_cli/commands/: __init__.py  publish.py  stack.py
lib/lma_cli_pkg/tests/: __init__.py  test_cli.py
lib/lma_sdk/: pyproject.toml
lib/lma_sdk/lma_sdk/: __init__.py  client.py  exceptions.py
lib/lma_sdk/lma_sdk.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
lib/lma_sdk/lma_sdk/_core/: __init__.py  publish.py  (+1 more)
lib/lma_sdk/tests/: __init__.py  conftest.py  test_client.py  test_publish_operations.py  test_stack_operations.py
(+934 files in other folders)
